--- a/coolshark/src/main/resources/static/style.css
+++ b/coolshark/src/main/resources/static/style.css
@@ -23,9 +23,9 @@ h1 {
   margin-top: 30vh;
   width: 100%;
   text-align: center;
-  font-size: 999%;
+  font-size: 999% !important;
   font-family: sans-serif;
-  color: rgb(255, 255, 0);
+  color: rgb(255, 255, 1);
   opacity: 0.5;
 }
 
@@ -38,7 +38,7 @@ canvas {
    https://www.youtube.com/watch?v=lX5LZTWc4f8&t
 */
 .label {
-  font-size: 2.2rem;
+  font-size: 1.5rem !important;
   background: url("https://res.cloudinary.com/nikita-rudenko/image/upload/v1544906837/stripe_c982eebe592d6c30f2034f5ce80b1fc6.png");
   background-clip: text;
   -webkit-background-clip: text;
@@ -82,7 +82,7 @@ canvas {
 
 @media (max-width: 740px) {
   .label {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
   }
   .time span {
     padding: 0 16px;
