--- a/coolshark/src/main/resources/static/style.css
+++ b/coolshark/src/main/resources/static/style.css
@@ -23,7 +23,7 @@ h1 {
   margin-top: 30vh;
   width: 100%;
   text-align: center;
-  font-size: 999% !important;
+  font-size: 999%;
   font-family: sans-serif;
   color: rgb(255, 255, 1);
   opacity: 0.5;
